@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 09-03-2006 fixed: Controlgroup default control saving wasn't working correctly.
+ - 09-03-2006 fixed: Crash in Settings->Appearance if Font.xml wasn't of the usual form.
  - 08-03-2006 fixed: trying to access a nonexisting smb computer showed authentication dialog instead of invalid computer name.
  - 08-03-2006 added: System.DVDLabel info label.  Shows the title of the dvd.
  - 08-03-2006 added: Smart Playlists in My Music.  Only loadable from a file (no GUI setup of smart playlists)
